--- a/src/assets/json/projects.json
+++ b/src/assets/json/projects.json
@@ -9,7 +9,7 @@
 			"projectLanguage": ["C++"],
 			"projectLibraries": ["Arduino", "Stepper Motor HAL"],
 			"projectAsset": "armanipulator.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/Armanipulator" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/Armanipulator" }],
 			"projectStatus": { "status": "Archived", "reason": "(No Longer in Active Development)" }
 		},
 		{
@@ -20,7 +20,7 @@
 			"projectLanguage": ["C#"],
 			"projectLibraries": [".NET Core 3.1"],
 			"projectAsset": "cnhasm-noarch.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/cnhasm-noarch" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/cnhasm-noarch" }],
 			"projectStatus": { "status": "Finished" }
 		},
 		{
@@ -32,7 +32,7 @@
 			"projectLibraries": ["Angular", "Firebase (via @angular/fire)", "Bootstrap"],
 			"projectAsset": "Picture1.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/UberUnit" },
+				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/UberUnit" },
 				{ "linkType": "demo", "linkURL": "https://uberunit.faceftw.dev" },
 				{
 					"linkType": "misc",
@@ -73,7 +73,7 @@
 			"projectLinks": [
 				{
 					"linkType": "github",
-					"linkURL": "https://github.com/rhit-westeraj/rhit-westeraj.github.io/tree/angular"
+					"linkURL": "https://github.com/FaceFTW/FaceFTW.github.io/tree/angular"
 				}
 			],
 			"projectStatus": { "status": "Finished" }
@@ -87,7 +87,7 @@
 			"projectLibraries": ["ReactJS", "MUI", "Firebase (via react-fire)"],
 			"projectAsset": "strivestats.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/strive-stats" },
+				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/strive-stats" },
 				{ "linkType": "demo", "linkURL": "https://strive-stats.faceftw.dev" },
 				{
 					"linkType": "misc",
@@ -104,7 +104,7 @@
 			"projectSubDesc": "For Rose-Hulman CSSE374: Software Design, Further Worked on in CSSE375: Software Construction and Evolution",
 			"projectLanguage": ["Java 8 (Maven)"],
 			"projectLibraries": ["OW2 ASM", "JUnit (Testing)", "PIT (Test/Mutation Coverage)"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/DesignLint" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/DesignLint" }],
 			"projectAsset": "designlint.webp",
 			"projectStatus": { "status": "Finished" }
 		},
@@ -116,7 +116,7 @@
 			"projectLanguage": ["Java 8"],
 			"projectLibraries": ["Bouncy Castle (Java Variant)"],
 			"projectAsset": "opencryptobench.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/OpenCryptoBench" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/OpenCryptoBench" }],
 			"projectStatus": { "status": "Archived", "reason": "No Longer in Development" }
 		},
 		{
@@ -139,7 +139,7 @@
 			"projectLibraries": ["TI-RTOS (For MSP432)", "TI MSP432/CC2650 Bluetooth Stack"],
 			"projectAsset": "scavlander.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/scavlanders-gamepad" }
+				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/scavlanders-gamepad" }
 			],
 			"projectStatus": { "status": "Archived", "reason": "No Longer in Active Development" }
 		},
@@ -171,7 +171,7 @@
 			"projectLibraries": ["N/A"],
 			"projectAsset": "thinkpadplus.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/ThinkPadPlus_RainmeterSkin" },
+				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/ThinkPadPlus_RainmeterSkin" },
 				{ "linkType": "text", "text": " (Repo not public yet)" }
 			],
 			"projectStatus": { "status": "Active Development" }
@@ -184,7 +184,7 @@
 			"projectLanguage": ["Powershell"],
 			"projectLibraries": ["BluebirdPS"],
 			"projectAsset": "pstweettemplate.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/PSTweetTemplate" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/PSTweetTemplate" }],
 			"projectStatus": { "status": "Suspended", "reason": "No Current Motivation" }
 		},
 		{
@@ -195,7 +195,7 @@
 			"projectLanguage": ["C, Docker, "],
 			"projectLibraries": ["OpenGL (GLX)"],
 			"projectAsset": "3dpipes.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/gl-pipes" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/gl-pipes" }],
 			"projectStatus": { "status": "Active Development" }
 		},
 		{
@@ -207,7 +207,7 @@
 			"projectLibraries": ["ReactJS", "MUI", "NerdFonts"],
 			"projectAsset": "portfolionew.webp",
 			"projectLinks": [
-				{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/rhit-westeraj.github.io" }
+				{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/FaceFTW.github.io" }
 			],
 			"projectStatus": { "status": "Active Development" }
 		},
@@ -219,7 +219,7 @@
 			"projectLanguage": ["Powershell", "ZSH", "VimScript (Neovim)"],
 			"projectLibraries": ["Chezmoi"],
 			"projectAsset": "dotfiles.webp",
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/dotfiles" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/dotfiles" }],
 			"projectStatus": { "status": "Active Development" }
 		},
 		{
@@ -229,7 +229,7 @@
 			"projectSubDesc": "For Rose-Hulman CSSE477 - Software Architecture",
 			"projectLanguage": ["Java"],
 			"projectLibraries": ["See Repo"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/jftp-scuffed" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/jftp-scuffed" }],
 			"projectStatus": { "status": "Finished" },
 			"projectAsset": "jftp.webp"
 		},
@@ -240,7 +240,7 @@
 			"projectSubDesc": "For Rose-Hulman Senior Project (CSSE497-499)",
 			"projectLanguage": ["C# (.NET 6)", "TypeScript"],
 			"projectLibraries": ["ASP.NET Core 6", "Entity Framework Core 6", "Math.NET", "ReactJS"],
-			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/rhit-westeraj/RetireSimple" }],
+			"projectLinks": [{ "linkType": "github", "linkURL": "https://github.com/FaceFTW/RetireSimple" }],
 			"projectStatus": { "status": "Active Development" },
 			"projectAsset": "retiresimple.webp"
 		}
