--- a/package.json
+++ b/package.json
@@ -1,45 +1,39 @@
 {
-  "name": "portfolio-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "eleventy --serve",
-		"css-dev":"tailwindcss -i src/main.css -o dist/assets/main.css --watch",
+	"name": "portfolio-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"serve": "eleventy --serve",
+		"css-dev": "tailwindcss -i src/main.css -o dist/assets/main.css --watch",
 		"build": "eleventy"
-  },
-  "dependencies": {
-
-    "tailwind-merge": "3.3.0",
-    "tw-animate-css": "1.3.2",
+	},
+	"dependencies": {
+		"tw-animate-css": "1.3.2",
 		"@11ty/eleventy": "3.1.2"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@mdx-js/loader": "3.1.0",
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2",
+		"@mdx-js/loader": "3.1.0",
 		"@11ty/eleventy-navigation": "^0.3",
 		"@11ty/eleventy-plugin-rss": "^2",
 		"@11ty/eleventy-img": "^6",
-    "@shikijs/rehype": "3.4.2",
-    "@shikijs/themes": "3.4.2",
-    "@tailwindcss/postcss": "4.1.8",
-    "@tailwindcss/typography": "0.5.16",
-		"@tailwindcss/cli":"4.1.11",
-    "@types/mdx": "2.0.13",
-    "@types/node": "22.15.26",
-    "@types/react": "19.1.6",
-    "@types/react-dom": "19.1.5",
-    "next-compose-plugins": "2.2.1",
-    "next-sitemap": "4.2.3",
-    "postcss": "8.5.4",
-    "remark": "15.0.1",
-    "remark-frontmatter": "5.0.0",
-    "remark-gfm": "4.0.1",
-    "remark-html": "16.0.1",
-    "remark-mdx-frontmatter": "5.1.0",
-    "remark-rehype": "11.1.2",
-    "rehype-stringify": "10.0.1",
-    "shiki": "3.4.2",
-    "tailwindcss": "4.1.8",
-    "typescript": "5.8.3"
-  }
+		"@shikijs/rehype": "3.4.2",
+		"@shikijs/themes": "3.4.2",
+		"@tailwindcss/postcss": "4.1.8",
+		"@tailwindcss/typography": "0.5.16",
+		"@tailwindcss/cli": "4.1.11",
+		"@types/mdx": "2.0.13",
+		"@types/node": "22.15.26",
+		"postcss": "8.5.4",
+		"remark": "15.0.1",
+		"remark-frontmatter": "5.0.0",
+		"remark-gfm": "4.0.1",
+		"remark-html": "16.0.1",
+		"remark-mdx-frontmatter": "5.1.0",
+		"remark-rehype": "11.1.2",
+		"rehype-stringify": "10.0.1",
+		"shiki": "3.4.2",
+		"tailwindcss": "4.1.8",
+		"typescript": "5.8.3"
+	}
 }
